--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -7,11 +7,17 @@
     <form id="form_for_reverse" name="text" method="post"  action="/reverse"  enctype="multipart/form-data">
     {% csrf_token %}
         <label for="inputtext"><h3>Введите текст, который хотите развернуть</h3></label>
-        <textarea class="form-control" rows="5" name="text" id="inputtext">{% if default_text %}{{ default_text }}{% endif %}</textarea>
+         {% for field in form %}
+            <div class="fieldWrapper">
+                {{ field }}
+            </div>
+        {% endfor %}
+{#        <textarea class="form-control" rows="5" name="text" id="inputtext">{% if default_text %}{{ default_text }}{% endif %}</textarea>#}
         <br>
         <button class="btn btn-primary">Развернуть</button>
     </form>
     {% if reversed_text %}
-        <h3>Результат:</h3>{{reversed_text}}
+        <h3>Результат:</h3>
+        <p class="reversed-text">{{reversed_text}}</p>
     {% endif %}
 {% endblock %}
